tests/externblob/faulty_simple_multiple_blobs.sy
A :: externblob {}
B :: externblob {}

f :: fn a: A do end

a : fn -> A : external
b : fn -> B : external

start :: fn do
    f' a'
    f' b'
end

// error: A 'A from
